
CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
PROJECT(iznalang)

set(CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/cmake")

ADD_DEFINITIONS(-std=c++11)

FIND_PACKAGE(BISON 3.0 REQUIRED)
FIND_PACKAGE(Boost 1.46 REQUIRED)
FIND_PACKAGE(OpenGL REQUIRED)
FIND_PACKAGE(GLUT REQUIRED)
FIND_PACKAGE(GLEW REQUIRED)
Find_PACKAGE(Libpng REQUIRED)

INCLUDE_DIRECTORIES(include)
ADD_SUBDIRECTORY(src)

